--- a/News.html
+++ b/News.html
@@ -80,11 +80,11 @@
         <header>
             <img id="banner" src="IMAGES/banner.jpg" alt="Banner">
             <nav>
-                <a href="#">Početna stranica</a>
-                <a href="#">Novosti</a>
+                <a href="Index.html">Početna stranica</a>
+                <a href="News.html">Novosti</a>
                 <a href="#">Galerija</a>
                 <a href="#">O nama</a>
-                <a href="#">Kontakt</a>
+                <a href="Contact.html">Kontakt</a>
             </nav>
         </header>
         <main>
