--- a/news_1.html
+++ b/news_1.html
@@ -29,10 +29,10 @@
                     margin: 0 10px; }
             nav {   background-color:#33332f;
                     height: 25px;}
-            figure {width: 40%;
+            figure {width: 20%;
                     color: bisque;
                     float: left;
-                    margin: 0 4% 0 0;
+                    margin: 0 5% 0 0;
                     padding: 0;}
             figure img {width: 100%;}
             figcaption {text-align: center;
@@ -61,28 +61,46 @@
         <header>
             <img id="banner" src="IMAGES/banner.jpg" alt="Banner">
             <nav>
-                <a href="#">Početna stranica</a>
-                <a href="#">Novosti</a>
+                <a href="Index.html">Početna stranica</a>
+                <a href="News.html">Novosti</a>
                 <a href="#">Galerija</a>
                 <a href="#">O nama</a>
-                <a href="#">Kontakt</a>
+                <a href="Contact.html">Kontakt</a>
             </nav>
         </header>
         <main>
             <div id="page-container">
                 <div id="content-wrap">
+                    <figure>
+                        <img src="IMAGES/1.jpg" alt="">
+                        <figcaption>Pauza</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="IMAGES/1b.jpg" alt="">
+                        <figcaption>Čekamo meso</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="IMAGES/1c.jpg" alt="">
+                        <figcaption>Razgovori</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="IMAGES/1d.jpg" alt="">
+                        <figcaption>Na odlasku</figcaption>
+                    </figure>
+                    <hr>
                     <h1>2. Vrbovečka biciklijada</h1>
                     <hr>
                     <h2>27.5.2017. - 121km</h2>
-                    <figure>
-                        <img src="IMAGES/1.jpg" alt="vrbovecka" width="40%">
-                        <figcaption>Vrbovečka biciklijada - pauza</figcaption>
-                    </figure>
                     <p>Na poziv M iz Cugovca, uputili smo se speckama na 2. po redu Vrbovečku biciklijadu. Neizbježan put je preko Dugog sela gdje je cesta još uvijek u betonskim blokovima, pa se prilično razdrmaš dok ih prođeš.. Primjetili smo neke radove na cesti, pa se nadamo da će se i to uskoro promjeniti..</p>
                     <p>Po dolasku u Vrbovec, prijavili smo se organizatorima, pa s M popili kavu i krenuli. Organizacija je bila odlična, od osigurane hrane i pića, popratnog kombija, policijske pratnje, snimanja biciklijade kamerama i dronom, itd.. </p>
+                    <p>Organizirane su i 3 okrijepne stanice sa klopom i cugom, posebno je najavljeno i njihovo tradicionalno jelo tzv. pera, ali moram reći da se nismo baš nešto oduševili s njom.</p>
+                    <p>No cijelom gradu Vrbovcu, kao ni organizatorima ove biciklijade se nemre ništa posebno zamjeriti, stvarno su se potrudili da sve bude na nivou!</p>
                     <p>Na kraju biciklijade čekala nas je klopa, cuga i tamburaši, pa smo se još malo podružili i krenuli nazad za ZG..</p>
                     <img src="IMAGES/1karta.jpg" alt="karta" width="40%">
                     <a href="https://www.strava.com/activities/1007952563">Strava - 2.Vrbovečka biciklijada</a>
+                    <hr>
+                    <a href="News.html">Povratak na Novosti</a>
+                    <hr>
             </div> 
             <footer><a href="https://www.strava.com/athletes/15676137"><img src="IMAGES/strava.png" alt="stravaicon" height="30px"></a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspCopyright  &copy; Zvonko Juras 2024.&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="https://github.com/z3juras/WEB_projektni_zadatak_ZJ"><img src="IMAGES/github-mark-white.png" alt="githubicon" height="30px"></a></footer> 
         </main>
