--- a/news_2.html
+++ b/news_2.html
@@ -29,10 +29,10 @@
                     margin: 0 10px; }
             nav {   background-color:#33332f;
                     height: 25px;}
-            figure {width: 40%;
+            figure {width: 20%;
                     color: bisque;
                     float: left;
-                    margin: 0 4% 0 0;
+                    margin: 0 5% 0 0;
                     padding: 0;}
             figure img {width: 100%;}
             figcaption {text-align: center;
@@ -61,29 +61,47 @@
         <header>
             <img id="banner" src="IMAGES/banner.jpg" alt="Banner">
             <nav>
-                <a href="#">Početna stranica</a>
-                <a href="#">Novosti</a>
+                <a href="Index.html">Početna stranica</a>
+                <a href="News.html">Novosti</a>
                 <a href="#">Galerija</a>
                 <a href="#">O nama</a>
-                <a href="#">Kontakt</a>
+                <a href="Contact.html">Kontakt</a>
             </nav>
         </header>
         <main>
             <div id="page-container">
                 <div id="content-wrap">
+                    <figure>
+                        <img src="IMAGES/2.jpg" alt="">
+                        <figcaption>U tunelu</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="IMAGES/2b.jpg" alt="">
+                        <figcaption>Ulazak</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="IMAGES/2c.jpg" alt="">
+                        <figcaption>Kod dvorca</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="IMAGES/2d.jpg" alt="">
+                        <figcaption>Povratak</figcaption>
+                    </figure>
+                    <hr>
                     <h1>Brestanica</h1>
                     <hr>
                     <h2>22.6.2019. - 137km</h2>
-                    <figure>
-                        <img src="IMAGES/2.jpg" alt="brestanica" width="40%">
-                        <figcaption>U tunelu</figcaption>
-                    </figure>
                     <p>Ideju za ovu vožnju dobili smo na nekim forumima i na Stravi. Radi se o nama najbližim biciklističkim tunelima, nalaze se u mjestu Brestanica u Sloveniji. Do samog dolaska do njih nismo bili sigurni jesu li otvoreni za promet jer smo pronalazili različite podatke o tome (nedavno su bili zatvoreni zbog uređenja asfalta u njima)</p>
+                    <p>Gruba trasa je ova: Pimpek plac Samobor Bregana Brežice Krško Brestanica i povratak sada s desne strane Krke i Save opet do RH.</p>
                     <p>Odmah po polasku smo nagazili pedale i prilično brzo prošli dijelove koji su nam već dosta poznati. Tek prelaskom granice smo počeli više dizati glave, promatrati i komentirati okoliš. Cesta kroz Sloveniju je dobra, u Krškom nas je nešto malo oprala kišica i ubrzo smo bili u Brestanici. </p>
                     <p>Mjesto je malo, s bogatom rudarskom tradicijom. Tako su nastali i naši tuneli, probijeni su za transport rude od okna do rijeke Save gdje su išle na daljni transport.</p>
-                    <p>Iznad mjestačca su se nadvila dva dvorca, mi smo se odlučili za posjetu Gradu Rajhenburgu. </p>
+                    <p>Iznad mjestačca su se nadvila dva dvorca, mi smo se odlučili za posjetu Gradu Rajhenburgu koji izgleda stvarno lijepo, obnovljen je nedavno i sad funkcionira kao muzej i hotel u sklopu kojeg je i “čokoladnica”, proizvodnja i prodaja čokoladnih proizvoda.</p>
+                    <p>U jednom trenutku naš odmor i razgledavanje Rajhenberga prekinula je kišica, pa smo krenuli lagano u povratak. Desnom stranom uz rijeke Krka i Sava, već nam je poznata ruta, cesta je lijepa iako dosta prometna.</p>
                     <img src="IMAGES/2karta.jpg" alt="karta" width="40%">
                     <a href="https://www.strava.com/activities/2471022870">Strava - Brestanica</a>
+                    <hr>
+                    <a href="News.html">Povratak na Novosti</a>
+                    <hr>
             </div> 
             <footer><a href="https://www.strava.com/athletes/15676137"><img src="IMAGES/strava.png" alt="stravaicon" height="30px"></a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspCopyright  &copy; Zvonko Juras 2024.&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="https://github.com/z3juras/WEB_projektni_zadatak_ZJ"><img src="IMAGES/github-mark-white.png" alt="githubicon" height="30px"></a></footer> 
         </main>
