--- a/news_3.html
+++ b/news_3.html
@@ -29,10 +29,10 @@
                     margin: 0 10px; }
             nav {   background-color:#33332f;
                     height: 25px;}
-            figure {width: 40%;
+            figure {width: 20%;
                     color: bisque;
                     float: left;
-                    margin: 0 4% 0 0;
+                    margin: 0 5% 0 0;
                     padding: 0;}
             figure img {width: 100%;}
             figcaption {text-align: center;
@@ -61,28 +61,46 @@
         <header>
             <img id="banner" src="IMAGES/banner.jpg" alt="Banner">
             <nav>
-                <a href="#">Početna stranica</a>
-                <a href="#">Novosti</a>
+                <a href="Index.html">Početna stranica</a>
+                <a href="News.html">Novosti</a>
                 <a href="#">Galerija</a>
                 <a href="#">O nama</a>
-                <a href="#">Kontakt</a>
+                <a href="Contact.html">Kontakt</a>
             </nav>
         </header>
         <main>
             <div id="page-container">
                 <div id="content-wrap">
+                    <figure>
+                        <img src="IMAGES/3.jpg" alt="">
+                        <figcaption>U tunelu</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="IMAGES/3b.jpg" alt="">
+                        <figcaption>Ulazak</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="IMAGES/3c.jpg" alt="">
+                        <figcaption>Kod dvorca</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="IMAGES/3d.jpg" alt="">
+                        <figcaption>Povratak</figcaption>
+                    </figure>                    
+                    <hr>
                     <h1>BRM 300 Sveta Nedelja (Senj)</h1>
                     <hr>
                     <h2>6.6.2021. - 323km</h2>
-                    <figure>
-                        <img src="IMAGES/3.jpg" alt="senj" width="40%">
-                        <figcaption>Senj - riva</figcaption>
-                    </figure>
-                    <p>Kako je organizator breveta zatražio dolazak bar pola sata ranije zbog prijava, a i ohrabren time što je kafić radio u isto vrijeme kad se išlo na BRM 400, papirologiju smo nas 10-tak riješili brzo i krenuli.</p>
-                    <p>Prije polaska prepoznajem neke ljude, Ossa se došao javiti iako ne namjerava na brevet, prepoznao Fillu s kojim je Robi vozio BRM Zagorske dvorce, forumaš g-flash kojem je pred sam polazak puknuo lanac, pa odustaje od breveta i također forumaš omahen s kojim ću voziti prvih 60-tak km.</p>
-                    <p>Krećemo i do iza Duge Rese vozim u grupi s još 5 biciklista. Odmah na polasku nam se prikačio još jedan biciklist, po odjeći zaključujem da nije brevetaš nego neki lokalac, pita jel može s nama do Karlovca, krenuo je iz Kerestinca na kavu, može. U Karlovcu pita do kud idemo, velimo mu do Senja, kad se vraćate, odmah isti dan, veli on, može idem onda s vama. I ode bez da je imao išta osim jednog bidona vode.. Čovjek je umirovljeni Tigar, valjda živi u Domu tigrova na Rakitju, možda se nema kome ni javiti da ga neće biti cijeli dan doma..</p>
+                    <p>Kako je organizator breveta zatražio dolazak bar pola sata ranije zbog prijava, a i ohrabren time što je kafić radio u isto vrijeme kad se išlo na BRM 400, došao sam već oko 5:15 na trg u centru Svete Nedelje. Papirologiju smo nas 10-tak riješili brzo, vlasnica kafića se nije još probudila, pa nismo imali razloga tamo čekati do 6 nego nas je Ares uputio da krenemo ranije. </p>
+                    <p>Prije polaska prepoznajem neke ljude, Ossa se došao javiti iako ne namjerava na brevet, prepoznao Fillu s kojim je Robi vozio BRM Zagorske dvorce, forumaš g-flash kojem je pred sam polazak puknuo lanac, pa odustaje od breveta i također forumaš omahen s kojim ću voziti prvih 60-tak km. Čovjek ima preko 5 banki i relativno je svjež na specki ali ima puuuno kilometara u guzici, s biciklom je obišao pola svijeta valjda..</p>
+                    <p>Krećemo i do iza Duge Rese vozim u grupi s još 5 biciklista. Odmah na polasku nam se prikačio još jedan biciklist, po odjeći zaključujem da nije brevetaš nego neki lokalac, pita jel može s nama do Karlovca, krenuo je iz Kerestinca na kavu, može. U Karlovcu pita do kud idemo, velimo mu do Senja, kad se vraćate, odmah isti dan, veli on, može idem onda s vama. I ode bez da je imao išta osim jednog bidona vode. Čovjek je umirovljeni Tigar, valjda živi u Domu tigrova na Rakitju, možda se nema kome ni javiti da ga neće biti cijeli dan doma.. Poslije saznajem da je proveo cijeli dan s forumašem omahenom, skompali su se i vozili do kraja zajedno. Omahen je Aresu sve ispričao, a ovaj mu dao karton, medalju i klopu pa je tako ovaj brevet dobio još jednog sudionika.. </p>
+                    <p>Sada vozim sam, radim prvu kratku pauzu za sendvič i nastavljam do Tounja, tražim birtiju za kavu i kolu, klasično debela konobarica i par lokalaca koji sline za istom. Skidam podmajicu jer postaje vruće i nastavljam dalje. Čujem da je nešto počelo krckati na biciklu, silazim, provjeravam, zaključujem da je iz ležaja zadnjeg kotača. Odlučujem da nastavljam dalje, sisterica mi je u Bakarcu, pa ću je zvati u pomoć u krajnjem slučaju. Krckanje se pretvara u lupanje i struganje, rukom okrećem kotač i vidim da dosta zapinje, koči sam od sebe, mislim si, baš fino.. Valjda ću stići do Senja. </p>
+                    <p>Više puta sam u sebi spomenuo Mariju Tereziju i njezinu cestogradnju, a najviše ju volim jer je svako malo postavila uz put i neki izvor, česmu, tako da vode ima stvarno dovoljno..</p>
                     <img src="IMAGES/3karta.jpg" alt="karta" width="40%">
                     <a href="https://www.strava.com/activities/5421547164">Strava - BRM 300</a>
+                    <hr>
+                    <a href="News.html">Povratak na Novosti</a>
+                    <hr>
             </div> 
             <footer><a href="https://www.strava.com/athletes/15676137"><img src="IMAGES/strava.png" alt="stravaicon" height="30px"></a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspCopyright  &copy; Zvonko Juras 2024.&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="https://github.com/z3juras/WEB_projektni_zadatak_ZJ"><img src="IMAGES/github-mark-white.png" alt="githubicon" height="30px"></a></footer> 
         </main>
