--- a/news_4.html
+++ b/news_4.html
@@ -29,10 +29,10 @@
                     margin: 0 10px; }
             nav {   background-color:#33332f;
                     height: 25px;}
-            figure {width: 40%;
+            figure {width: 20%;
                     color: bisque;
                     float: left;
-                    margin: 0 4% 0 0;
+                    margin: 0 5% 0 0;
                     padding: 0;}
             figure img {width: 100%;}
             figcaption {text-align: center;
@@ -61,28 +61,46 @@
         <header>
             <img id="banner" src="IMAGES/banner.jpg" alt="Banner">
             <nav>
-                <a href="#">Početna stranica</a>
-                <a href="#">Novosti</a>
+                <a href="Index.html">Početna stranica</a>
+                <a href="News.html">Novosti</a>
                 <a href="#">Galerija</a>
                 <a href="#">O nama</a>
-                <a href="#">Kontakt</a>
+                <a href="Contact.html">Kontakt</a>
             </nav>
         </header>
         <main>
             <div id="page-container">
                 <div id="content-wrap">
+                    <figure>
+                        <img src="IMAGES/4.jpg" alt="">
+                        <figcaption>Metalno čudovište</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="IMAGES/4b.jpg" alt="">
+                        <figcaption>Na mostu</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="IMAGES/4c.jpg" alt="">
+                        <figcaption>Odmor</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="IMAGES/4d.jpg" alt="">
+                        <figcaption>Kraljev grob</figcaption>
+                    </figure>                     
+                    <hr>
                     <h1>Petrova gora</h1>
                     <hr>
                     <h2>22.5.2021. - 238km</h2>
-                    <figure>
-                        <img src="IMAGES/4.jpg" alt="petrova gora" width="40%">
-                        <figcaption>Pred spomenikom</figcaption>
-                    </figure>
-                    <p>Nakon prošlotjednog odlaska do Karlovca gdje se skupilo preko 180km zaključili smo da je vrijeme za jedan neformalni BRM 200 i odluka je pala na već odavno planiranu Petrovu Goru odnosno na njen vrh, tj. Spomenik ustanku naroda Banije i Korduna.</p>
-                    <p>Polazak je trebao biti rani, 8:15 na PP ali Robi javlja da je zaspao i da ga čekamo. A ništa, da se zagrijem, radim krugove kod stadiona i stvarno, evo njega za cca 20min, na moje veliko iznenađenje.. Krećemo i za sat vremena smo u Brezovici gdje se nalazimo sa Sašom. Brzinski sendvič i pada dogovor da se pije kava u Pisarovini pa stišćemo do tamo jer neki jedva čekaju prvu jutarnju dozu kofeina.</p>
-                    <p>Nakon kave vozimo uz Kupu koju prelazimo u mjestu Blatnica, odmor na mostu uz uobičajeno zurenje u rijeku koje nam prekida neki lokalni deda biciklist iz Karlovca koji ima 100 pitanja za nas: kud idemo, kojim putem, hoćemo li prečicom, idemo li bez odmora do tamo, itd.. Kad je skužio da nam treba mir i tišina, odjurio je svojim putem..</p>
+                    <p>Nakon prošlotjednog odlaska do Karlovca gdje se skupilo preko 180km zaključili smo da je vrijeme za jedan neformalni BRM 200 i odluka je pala na već odavno planiranu Petrovu Goru odnosno na njen vrh Spomenik ustanku naroda Banije i Korduna. Polazak je trebao biti rani 8:15 na PP ali Robi javlja da je zaspao i da ga čekamo. A ništa, da se zagrijem, radim krugove kod stadiona i stvarno, evo njega za cca 20min, na moje veliko iznenađenje.. Krećemo i za sat vremena smo u Brezovici gdje se nalazimo sa Sašom. </p>
+                    <p>Brzinski sendvič i pada dogovor da se pije kava u Pisarovini pa stišćemo do tamo jer neki jedva čekaju prvu jutarnju dozu kofeina. Nakon kave vozimo uz Kupu koju prelazimo u mjestu Blatnica, odmor na mostu uz uobičajeno zurenje u rijeku koje nam prekida neki lokalni deda biciklist iz Karlovca koji ima 100 pitanja za nas: kud idemo, kojim putem, hoćemo li prečicom, idemo li bez odmora do tamo, itd.. Kad je skužio da nam treba mir i tišina, odjurio je svojim putem..</p>
+                    <p>Napredujemo prekrasnim krajolikom Korduna (valjada?) preko sela Lipje, Brežani, Slunjski Moravci, Ivanković selo i Utinja, kad najedamput makadam. Vidi se i u ovoj pripizdini da je vrijeme lokalnih izbora, asfalta nema ali je nasipan friški, oštri makadam po kojem vozimo. Robi čita iz Garmina da imamo još 12km do Vojnića, nadamo se da će ipak uskoro početi asfalt jer vozimo jako sporo i u strahu smo za gume.. Zaista, iza jednog zavoja dolazimo na most iza kojeg počinje Općina Vojinić, a s njom i asfalt!! Odahnuli smo svi, a naročito Saša koji je pregurao zadnjih 50m do mosta.</p>
+                    <p>Nitko nije niš zbušio, sretni smo i idemo dalje. Uskoro dolazimo do ceste Vojnić – Gvozd gdje skrećemo desno za Vojnić, taj dio rute nam je dvosmjerni zbog asfaltne ceste do spomenika koja postoji samo s jedne strane, dok je spust šumski put kojim se ne usudimo spustiti. Prolazak kroz Vojnić je brz, stječemo dojam da se tu nema ništa za vidjeti i stišćemo dalje preko sela Radonja do podnožja Petrove Gore, slijedeća planirana stanica nam je u Lovačkom domu Muljava.</p>
+                    <p>Dolazimo napokon do spomenika koji je jako zapušten i doslovno se raspada pred našim očima, ali svejedno je monumentalan i ostavlja jaki dojam na posjetitelje. Malo sam razočaran jer se ne možemo popeti na njega ali svi ulazi su zavareni ili zaključani lokotom (možda bi se moglo podzemnim putem ali nismo isprobavali te ulaze). Odlučujemo potražiti grob kralja Petra Svačića do kojeg se dolazi makadamom oko 1km niže od spomenika. Robi je najustrajniji u tome, Saša i ja bi već odustali od spuštanja kad nam je javio da ga je našao..</p>
                     <img src="IMAGES/4karta.jpg" alt="karta" width="40%">
                     <a href="https://www.strava.com/activities/5341058912">Strava - Petrova gora</a>
+                    <hr>
+                    <a href="News.html">Povratak na Novosti</a>
+                    <hr>
             </div> 
             <footer><a href="https://www.strava.com/athletes/15676137"><img src="IMAGES/strava.png" alt="stravaicon" height="30px"></a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspCopyright  &copy; Zvonko Juras 2024.&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="https://github.com/z3juras/WEB_projektni_zadatak_ZJ"><img src="IMAGES/github-mark-white.png" alt="githubicon" height="30px"></a></footer> 
         </main>
