--- a/news_5.html
+++ b/news_5.html
@@ -29,10 +29,10 @@
                     margin: 0 10px; }
             nav {   background-color:#33332f;
                     height: 25px;}
-            figure {width: 40%;
+            figure {width: 20%;
                     color: bisque;
                     float: left;
-                    margin: 0 4% 0 0;
+                    margin: 0 5% 0 0;
                     padding: 0;}
             figure img {width: 100%;}
             figcaption {text-align: center;
@@ -61,28 +61,46 @@
         <header>
             <img id="banner" src="IMAGES/banner.jpg" alt="Banner">
             <nav>
-                <a href="#">Početna stranica</a>
-                <a href="#">Novosti</a>
+                <a href="Index.html">Početna stranica</a>
+                <a href="News.html">Novosti</a>
                 <a href="#">Galerija</a>
                 <a href="#">O nama</a>
-                <a href="#">Kontakt</a>
+                <a href="Contact.html">Kontakt</a>
             </nav>
         </header>
         <main>
             <div id="page-container">
                 <div id="content-wrap">
+                    <figure>
+                        <img src="IMAGES/5.jpg" alt="">
+                        <figcaption>Maslenica</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="IMAGES/5b.jpg" alt="">
+                        <figcaption>Tisno</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="IMAGES/5c.jpg" alt="">
+                        <figcaption>Bura</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="IMAGES/5d.jpg" alt="">
+                        <figcaption>Vir</figcaption>
+                    </figure> 
+                    <hr>
                     <h1>BRM 200 - 4 mosta</h1>
                     <hr>
                     <h2>27.3.2021. - 225km</h2>
-                    <figure>
-                        <img src="IMAGES/5.jpg" alt="4 mosta" width="40%">
-                        <figcaption>Pred spomenikom</figcaption>
-                    </figure>
-                    <p>Za prvi brevet ove godine odlučio sam da bude ovaj morski. Datum je još rani, ožujak može biti prilično hladan i nepredvidiv, ali ipak sam se pouzdao u mediteransku klimu. Pokazalo se da su mi predviđanja bila ispravna, dočekao me topli, iako dosta vjetroviti dan. Prikladno sam se obukao, bibsi kratki a gore dugo..</p>
-                    <p>Prijava i start je bio kod Interspara u Zadru u 8 ujutro. Zbog epidemioloških razloga promijenjeno je mjesto polaska (trebao je biti hotel Porto), kao i topli obrok na kraju breveta koji je ukinut. Organizator na startu dijeli energetske pločice i gelove, potpisujemo izjavu, preuzimamo kartone i krećemo..</p>
-                    <p>Zbog spomenutog juga, odmah na startu breveta sam se priključio jednoj većoj grupi s kojom sam, u dosta brzom ritmu, došao skroz do Vodica, do 1. mosta (za otok Murter) gdje je bila 1. kontrolna foto točka. Vjetar je jak, ruši naslonjene bicikle sudionika. </p>
+                    <p>Za prvi brevet ove godine odlučio sam da bude ovaj morski. Datum je još rani, ožujak može biti prilično hladan i nepredvidiv, ali ipak sam se pouzdao u mediteransku klimu. Pokazalo se da su mi predviđanja bila ispravna, dočekao me topli, iako dosta vjetroviti dan. Prikladno sam se obukao bibsi kratki a gore dugo.. Prijava i start je bio kod Interspara u Zadru u 8 ujutro. Zbog epidemioloških razloga promijenjeno je mjesto polaska (trebao je biti hotel Porto), kao i topli obrok na kraju breveta koji je ukinut. Organizator na startu dijeli energetske pločice i gelove, potpisujemo izjavu, preuzimamo kartone i krećemo..</p>
+                    <p>Zbog spomenutog juga, odmah na startu breveta sam se priključio jednoj većoj grupi s kojom sam, u dosta brzom ritmu, došao skroz do Vodica, do 1. mosta (za otok Murter) gdje je bila 1. kontrolna foto točka. Vjetar je jak, ruši naslonjene bicikle sudionika. Opet dobivamo okrijepu Cola, energetske pločice i gelovi, i nastavljamo dalje. Sada smo okrenuli leđa vjetru, pa se odlučujem nastaviti sam u svom ritmu. Svako malo me stigne neka od grupa, pa im se pridružujem kolko mi se da, a onda ih opet puštam dalje.</p>
+                    <p>Krajolik mi je u potpunosti poznat, proveo sam dosta vremena baš po ovim cestama kojima se danas krećemo. U takvom izmjenjivanju dolazimo do Benkovca gdje ljudi s kojima sam vozio odlaze na klopu, ja imam sendvič na leđima, pa nastavljam dalje preko Novigrada i dolazim do 2. kontrolne točke Maslenički most.</p>
+                    <p>de selfie, pada i vrećica gumenih bombona i idemo dalje. Povratak do Posedarja, pa dizanje prema Pagu. Na putu nailazim na jedan od rijetkih dućana, stajem, kupujem vodu, Colu i nove gumene i idemo do 3. k.t. Paški most. Sad se već osjeća umor, možda zbog vjetra koji mi opet puše u lice, pa se vozi dosta sporije do zadnje kontrolne točke Virski most koji ima dosta visoki luk, pa se na njegovom vrhu itekako osjeti jugo.. Preostaje zadnja etapa, povratak do Zadra. Vozim uz rub ceste, ljudi trube jer je pored ceste dvosmjerna biciklistička staza, ali pravim se da se to mene ne tiče već nastavljam po kolniku.</p>
+                    <p>Pridružuje mi se jedan brevetaš koji pita jel znam doći do Interspara, naravno da znam, pa izgubio sam 15 godina u tim krajevima, zajedno stižemo na cilj. Upisivanje podataka, klopanje sendviča sa pohanim (umjesto toplog obroka koji je bio dogovoren) i žuja za kraj. Na žalost, čujem informaciju da je bio jak sudar negdje prije 1.k.t., ništa od svega nisam vidio, nadam se da će sudionici biti dobro..</p>
                     <img src="IMAGES/5karta.jpg" alt="karta" width="40%">
                     <a href="https://www.strava.com/activities/5020816089">Strava - BRM 200 4 mosta</a>
+                    <hr>
+                    <a href="News.html">Povratak na Novosti</a>
+                    <hr>
             </div> 
             <footer><a href="https://www.strava.com/athletes/15676137"><img src="IMAGES/strava.png" alt="stravaicon" height="30px"></a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspCopyright  &copy; Zvonko Juras 2024.&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="https://github.com/z3juras/WEB_projektni_zadatak_ZJ"><img src="IMAGES/github-mark-white.png" alt="githubicon" height="30px"></a></footer> 
         </main>
