--- a/Contact.html
+++ b/Contact.html
@@ -81,9 +81,9 @@
             <nav>
                 <a href="Index.html">Početna stranica</a>
                 <a href="News.html">Novosti</a>
-                <a href="#">Galerija</a>
-                <a href="#">O nama</a>
-                <a href="#">Kontakt</a>
+                <a href="Gallery.html">Galerija</a>
+                <a href="AboutUs.html">O nama</a>
+                <a href="Contact.html">Kontakt</a>
             </nav>
         </header>
         <main>
