--- a/Gallery.html
+++ b/Gallery.html
@@ -77,8 +77,8 @@
             <nav>
                 <a href="Index.html">Početna stranica</a>
                 <a href="News.html">Novosti</a>
-                <a href="#">Galerija</a>
-                <a href="#">O nama</a>
+                <a href="Gallery.html">Galerija</a>
+                <a href="AboutUs.html">O nama</a>
                 <a href="Contact.html">Kontakt</a>
             </nav>
         </header>
@@ -192,7 +192,7 @@
                 function closeOverlay() {document.getElementById('overlay').style.display = 'none';}
             </script>
             <div id="page-container">
-                <footer><a href="https://www.strava.com/athletes/15676137"><img src="IMAGES/strava.png" alt="stravaicon" height="0px"></a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspCopyright  &copy; Zvonko Juras 2024.&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="https://github.com/z3juras/WEB_projektni_zadatak_ZJ"><img src="IMAGES/github-mark-white.png" alt="githubicon" height="30px"></a></footer>
+                <footer>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspCopyright  &copy; Zvonko Juras 2024.&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</footer>
             </div>        
         </main>
     </body>
