--- a/Index.html
+++ b/Index.html
@@ -63,23 +63,23 @@
             <nav>
                 <a href="Index.html">Početna stranica</a>
                 <a href="News.html">Novosti</a>
-                <a href="#">Galerija</a>
-                <a href="#">O nama</a>
+                <a href="Gallery.html">Galerija</a>
+                <a href="AboutUs.html">O nama</a>
                 <a href="Contact.html">Kontakt</a>
             </nav>
         </header>
         <main>
             <div id="page-container">
                 <div id="content-wrap">
-                    <h1>ZG + pedala</h1>
+                    <h1>Ako si...</h1>
                     <figure>
-                        <img src="IMAGES/trutovi.jpg" alt="trutovi slika" width="40%">
-                        <figcaption>Trutovi u ratničkim bojama</figcaption>
+                        <img src="IMAGES/cyc.jpg" alt="cycling slika" width="30%">
+                        <figcaption>Cestovni biciklizam</figcaption>
                     </figure>
-                    <h2>Priče s ceste</h2>
-                    <p>Nakon duuugo vremena zajedničkih vožnji, ekspedicija, breveta i običnih odlazaka na pivu, nas 5 odlučili smo malo uozbiljiti priču, pa osnivamo biciklistički klub &quot;NBK Trutovi&quot; koji aktivno djeluje na području grada Zagreba, Hrvatske i susjednih zemalja.</p>
-                    <p>Nabavljaju se klubska obilježja, započinje se sa redovnim zajedničkim vožnjama i druženjima izvan biciklizma. Tako nastaju poznate vožnje: &quot;Tradicionalno starogodišnje Sljeme&quot; i &quot;3PM (3 planine i more)&quot;.</p>
-                    <p>Djelujemo kao cestovni i brdski biciklisti, a posebno smo orjentirani prema dugačkim vožnjama - brevetima koji su u Hrvatskoj pod organizacijom <a href="https://randonneurscroatie.hr/">&quot;Randonneurs Croatie&quot;</a>. Ovdje su opisane priče s vožnja koje smo uspjeli dokumentirati ili zapamtiti..</p>
+                    <h2>zaljubljenik u biciklizam, entuzijast za putovanja ili samo hoćeš malo otići od kuće..</h2>
+                    <p>Na ovim stranicama saznat ćeš sve o našim avanturama, vidjet ćeš fotografije i pročitati putopise s naših vožnji.</p>
+                    <p>&quot;Sunce sija na nebu, vjetar ti lagano mazi lice, a bicikl je tvoj vjerni suputnik na putovanju bez kraja. Pedaliranje kroz slikovite pejzaže donosi osjmeh na lice, dok svaki okret pedale odjekuje slobodom. Vožnja kroz nepoznate staze postaje avantura puna iznenađenja, gdje se svako brdo pretvara u osvojeni vrhunac. Na biciklu se ne putuje samo fizički, već i duhovno, jer svaki pređeni kilometar nosi sa sobom radost istraživanja i otkrivanja novih čuda svijeta. Biciklizam je više od sporta, to je put ka sreći na dva kotača!&quot;</p>
+                    <p>Kada proučiš sve što smo ti pripremili, pridruži nam se i na cesti (ili u šumi). Bitna je samo tvoja dobra volja, a sve ostalo ćeš naučiti i nabaviti usput.</p>
                 </div>
                 <footer><a href="https://www.strava.com/athletes/15676137"><img src="IMAGES/strava.png" alt="stravaicon" height="30px"></a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspCopyright  &copy; Zvonko Juras 2024.&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="https://github.com/z3juras/WEB_projektni_zadatak_ZJ"><img src="IMAGES/github-mark-white.png" alt="githubicon" height="30px"></a></footer>
             </div>        
