--- a/News.html
+++ b/News.html
@@ -82,8 +82,8 @@
             <nav>
                 <a href="Index.html">Početna stranica</a>
                 <a href="News.html">Novosti</a>
-                <a href="#">Galerija</a>
-                <a href="#">O nama</a>
+                <a href="Gallery.html">Galerija</a>
+                <a href="AboutUs.html">O nama</a>
                 <a href="Contact.html">Kontakt</a>
             </nav>
         </header>
